--- a/frontend/src/components/homepage/home.css
+++ b/frontend/src/components/homepage/home.css
@@ -6,57 +6,7 @@
 }
 
   
-.banner {
-    background-image: url("../../assets/cover.jfif");
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    height: 100vmin;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-    color: white;
-  }
-  
-  .banner > h1 {
-    margin: 5vmax;
-  
-    font: 600 2.5vmax "Roboto";
-  }
-  
-  .banner > p {
-    font: 300 1.4vmax "Lucida Sans";
-  }
-  
-  .banner > a > button {
-    margin-bottom: 5vmax;
-    cursor: pointer;
-    background-color: white;
-    border: 1px solid white;
-    border-radius: 0;
-    padding: 1vmax;
-    transition: all 0.5s;
-    width: 9vmax;
-    font: 500 1vmax "Roboto";
-  }
-  .banner > a > button:hover {
-    background-color: rgba(255, 255, 255, 0);
-    color: white;
-  }
-  
-  .banner::after {
-    content: "";
-    width: 100vw;
-    height: 100vmin;
-    background-color: #ffffff;
-    position: absolute;
-    top: 0%;
-    left: 0;
-    clip-path: polygon(100% 68%, 0 100%, 100% 100%);
-    max-width: 100%;
-  }
+
   
   .homeHeading {
     text-align: center;
@@ -87,10 +37,13 @@
     margin: 2vmax;
     transition: all 0.5s;
     padding-bottom: 0.5vmax;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 15px 25px, rgba(0, 0, 0, 0.05) 0px 5px 10px;
   }
   
   .productCard > img {
     width: 14vmax;
+    
+    height: 60%;
   }
   
   .productCard > div {
@@ -120,7 +73,7 @@
   }
   
   .productCard:hover {
-    box-shadow: 0 0 5px rgba(15, 15, 15, 0.26);
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
   
     transform: translateY(-1vmax);
   }
